--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -659,12 +659,13 @@ footer {
 .topic-main .topic-meta:after {
   clear: both; }
 .topic-main .topic-meta li {
+  font-size: 12px;
   color: #999;
   margin-right: 20px;
   float: left; }
   .topic-main .topic-meta li a {
     color: #999; }
-  .topic-main .topic-meta li i {
+  .topic-main .topic-meta li.share i {
     cursor: pointer;
     font-size: 14px;
     margin-right: 5px; }
