--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -106,13 +106,14 @@
     .topic-meta{
         @include clearfix();
         li{
+            font-size:12px;
             color:#999;
             margin-right:20px;
             float:left; 
             a{
                 color:#999;
             }
-            i{
+            &.share i{
                 cursor:pointer;
                 font-size:14px;
                 margin-right:5px;
