--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -3,29 +3,38 @@
 
 .main{
     width:100%;
-    padding:40px 0;
     background:#f9f9f9;
+    padding:40px 0;
     .main-wrapper{
-        @include border-radius(5px);
-        background:#fff;
         @include clearfix();
+        background:#fff;
         margin:0 auto;
         width:1000px;
         padding:2%;
         color:#666;
+        h1,h2,h3,h4,h5,h6{
+            font-size:18px; 
+        }
     }
 }
 .content{
     float:left;
     width:680px;
     padding:10px;
+    .list-wrapper{
+        h1{
+            float:left; 
+            margin:0;
+            font-size:24px;
+        }
+    }
 }
 .sidebar{
     width:280px;
     padding:10px;
     float:left;
     .mod{
-        margin:20px 0; 
+        margin-bottom:20px;
     }
     .ad{
         width:100%; 
@@ -53,6 +62,7 @@
     }
 }
 .topic-list{
+    margin:20px 0;
     width:100%;
     overflow:hidden;
     li{
@@ -66,10 +76,31 @@
                 color:#111; 
             }
         }
+        span{
+            margin:0 5px; 
+        }
+        .author-avatar{
+            img{
+                @include border-radius(5px); 
+            }
+            width:60px;
+        }
+        .topic-title{
+            overflow:hidden;
+            width:50%;
+        }
+        .topic-detail{
+            width:50px;
+        }
+        .topic-last-reply{
+        }
     }
 }
 //detail
 .topic-main{
+    h1{
+        font-size:18px; 
+    }
     .topic-date{
         font-size:12px;
         color:#333;
@@ -144,7 +175,7 @@
 .reply-list,.hot-reply-list{
     border-top:1px solid $border-color;
 }
-.reply-list{
+.reply-list,.hot-reply-list{
     .reply-item{
         width:100%;
         @include clearfix(); 
@@ -176,7 +207,7 @@
         width:48px; 
         height:48px;
         margin-right:1%;
-        @include border-radius(3px);
+        @include border-radius(5px);
     }
     .reply-main{
         padding:0 0 0 90px;
@@ -283,7 +314,7 @@
 #show-avatar,#current-avatar{
     width:100px;
     height:100px;
-    @include border-radius(3px);
+    @include border-radius(5px);
 }
 .settings{
     .switch-triggers{
@@ -303,13 +334,13 @@
                 line-height:30px;
                 &:hover{
                     color:#111;
-                    border-bottom:3px solid #cc181e;
+                    border-bottom:3px solid #111;
                 }
             }
             &.cur{
                 a{
                     color:#111;
-                    border-bottom:3px solid #cc181e;
+                    border-bottom:3px solid #111;
                 }
             }
         }
@@ -339,14 +370,15 @@
             padding:10px 20px;
             border:none;
             @include border-radius(3px);
-            background:#cc181e;
+            background:$action-green;
             color:#fff;
             text-align:center;
         }
         .up-trigger{
+            padding:0px;
             background:none;
-            border:1px solid #cc181e;
-            color:#cc181e;
+            color:$action-green;
+            outline:0;
             display:block;
         }
     }
@@ -359,9 +391,6 @@
  */
 #new-topic{
     font-size:16px;
-    h1{
-        font-size:24px; 
-    }
     input,textarea{
         border:1px solid #ccc;
         @include border-radius(3px); 
@@ -411,8 +440,10 @@
 //pager
 .pager{
     margin:20px 0;
+    line-height:40px;
+    height:40px;
     .pager-wrapper{
-        text-align:center;
+        float:right;
         margin:0 auto;
         @include clearfix();
         li{
@@ -509,6 +540,7 @@
     left:40%;
     line-height:40px;
     text-align:center;
-    background:#333;
+    background:#000;
+    opacity:.8;
     color:#fff;
 }
