--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -6,7 +6,8 @@ body {
   padding: 0;
   background: white;
   width: 100%;
-  color: #999999; }
+  color: #999999;
+  word-wrap: break-word; }
   body a {
     text-decoration: none;
     color: #4083aa; }
