--- a/public/sass/reset.scss
+++ b/public/sass/reset.scss
@@ -13,6 +13,7 @@ body{
     background:$body-bg;
     width:100%;
     color:$font-color;
+    word-wrap:break-word;
     a{
         text-decoration:none;
         color:$link-color;
