--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -16,8 +16,8 @@ $link-hover-color:#205F7E;
 //form
 $input-color-placeholder:#ddd;
 
-$global-color:#be1931;
+$global-color:#00911B;
 
 $border-color:#f0f0f0;
 
-$action-green:#57AD69;
+$action-green:#00911B;
