--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -14,13 +14,15 @@ body {
   padding: 0;
   background: white;
   width: 100%;
-  color: #999999;
+  color: #8c8c8c;
   word-wrap: break-word; }
   body a {
     text-decoration: none;
     color: #4083aa; }
     body a:hover {
       color: #205f7e; }
+  body h1, body h2, body h3, body h4, body h5, body h6 {
+    font-size: 18px; }
 
 img {
   vertical-align: middle;
@@ -35,6 +37,9 @@ ul, ol {
 
 .list-inline > li {
   display: inline-block; }
+
+.fa {
+  margin-right: 5px; }
 
 .container {
   width: 100%;
@@ -443,13 +448,15 @@ textarea {
     cursor: not-allowed; }
 
 .nav {
+  position: fixed;
+  top: 0;
+  z-index: 9999;
   width: 100%;
   height: 50px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   line-height: 50px;
   color: #fff;
-  background: #333;
-  -webkit-box-shadow: 0px 0px 10px #999999;
-  box-shadow: 0px 0px 10px #999999; }
+  background: #333; }
   .nav:before, .nav:after {
     content: "";
     display: table; }
@@ -465,7 +472,7 @@ textarea {
     .nav .nav-container .logo {
       float: left; }
   .nav a {
-    color: #00911b; }
+    color: #8c8c8c; }
     .nav a:hover {
       text-decoration: none; }
   .nav .search-form {
@@ -501,7 +508,7 @@ textarea {
       padding: 0 10px;
       color: #fff;
       border: none;
-      background: #00911b;
+      background: #0084ff;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       -ms-border-radius: 3px;
@@ -556,22 +563,18 @@ footer {
       margin-right: 10px; }
 
 .main {
-  width: 100%;
-  background: #f9f9f9;
-  padding: 40px 0; }
+  width: 100%; }
   .main .main-wrapper {
     background: #fff;
-    margin: 0 auto;
+    margin: 0px auto;
     width: 1000px;
-    padding: 2%;
+    padding: 70px 0;
     color: #666; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
       display: table; }
     .main .main-wrapper:after {
       clear: both; }
-    .main .main-wrapper h1, .main .main-wrapper h2, .main .main-wrapper h3, .main .main-wrapper h4, .main .main-wrapper h5, .main .main-wrapper h6 {
-      font-size: 18px; }
 
 .content {
   float: left;
@@ -597,7 +600,7 @@ footer {
   display: inline-block;
   height: 40px;
   line-height: 40px;
-  background: #00911b;
+  background: #0084ff;
   color: #fff;
   padding: 0 15px;
   border: none;
@@ -609,7 +612,7 @@ footer {
   border-radius: 3px; }
   .new-post-btn:hover {
     text-decoration: none;
-    background: #00911b;
+    background: #007aeb;
     color: #fff;
     border: none; }
 
@@ -689,6 +692,8 @@ footer {
     cursor: pointer;
     font-size: 14px;
     margin-right: 5px; }
+.topic-main .topic-meta .fa-clock-o {
+  font-size: 16px; }
 
 #replyContent {
   width: 97%;
@@ -704,7 +709,7 @@ footer {
     width: 100px;
     height: 40px;
     margin-top: 20px;
-    background: #00911b;
+    background: #0084ff;
     color: #fff;
     border: none;
     -webkit-border-radius: 3px;
@@ -712,6 +717,8 @@ footer {
     -ms-border-radius: 3px;
     -o-border-radius: 3px;
     border-radius: 3px; }
+    .reply-form button[type=submit]:hover {
+      background: #007aeb; }
 
 .reply-list, .hot-reply-list {
   border-top: 1px solid #f0f0f0; }
@@ -821,7 +828,7 @@ footer {
     width: 50px;
     line-height: 40px; }
   .reg-form .tips, .login-form .tips {
-    color: #00911b;
+    color: #f14f3d;
     display: none;
     position: absolute;
     top: 40px;
@@ -835,12 +842,14 @@ footer {
     padding: 0 30px;
     border: none;
     color: #fff;
-    background: #00911b;
+    background: #0084ff;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     -ms-border-radius: 3px;
     -o-border-radius: 3px;
     border-radius: 3px; }
+    .reg-form .act button:hover, .login-form .act button:hover {
+      background: #007aeb; }
   .reg-form .loading, .login-form .loading {
     position: absolute;
     left: 50px;
@@ -849,15 +858,6 @@ footer {
 /*
  * settings
  */
-#show-avatar, #current-avatar {
-  width: 100px;
-  height: 100px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px; }
-
 .settings .switch-triggers:before, .settings .switch-triggers:after {
   content: "";
   display: table; }
@@ -909,13 +909,15 @@ footer {
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  background: #00911b;
+  background: #0084ff;
   color: #fff;
   text-align: center; }
+.settings form button[type=submit]:hover {
+  background: #007aeb; }
 .settings form .up-trigger {
   padding: 0px;
   background: none;
-  color: #00911b;
+  color: #3bc676;
   outline: 0;
   display: block; }
 .settings #showurl {
@@ -955,7 +957,7 @@ footer {
     width: 100px;
     height: 40px;
     line-height: 40px;
-    background: #00911b;
+    background: #0084ff;
     color: #fff;
     border: none;
     padding: 0;
@@ -964,6 +966,8 @@ footer {
     -ms-border-radius: 3px;
     -o-border-radius: 3px;
     border-radius: 3px; }
+    #new-topic button[type=submit]:hover {
+      background: #007aeb; }
 
 #popup {
   width: 50%;
@@ -1077,6 +1081,39 @@ footer {
   background: #000;
   opacity: .8;
   color: #fff; }
+
+.user-wrapper {
+  margin: -20px; }
+  .user-wrapper .user-hd {
+    width: 100%;
+    height: 420px; }
+    .user-wrapper .user-hd .userbg {
+      z-index: 1;
+      height: 420px;
+      overflow: hidden;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 50px;
+      margin: auto 0; }
+      .user-wrapper .user-hd .userbg img {
+        width: 100%; }
+  .user-wrapper #show-avatar, .user-wrapper #current-avatar {
+    width: 128px;
+    height: 128px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px; }
+  .user-wrapper .user-detail {
+    position: relative;
+    z-index: 99;
+    text-align: center; }
+    .user-wrapper .user-detail img.user-avatar {
+      background: #fff;
+      padding: 5px;
+      margin-top: -64px; }
 
 @media screen and (min-width: 767px) and (max-width: 970px) {
   .main .main-wrapper {
