--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,11 +1,13 @@
 .nav {
+  position: fixed;
+  top: 0;
+  z-index: 9999;
   width: 100%;
   height: 50px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   line-height: 50px;
   color: #fff;
-  background: #333;
-  -webkit-box-shadow: 0px 0px 10px #999999;
-  box-shadow: 0px 0px 10px #999999; }
+  background: #333; }
   .nav:before, .nav:after {
     content: "";
     display: table; }
@@ -21,7 +23,7 @@
     .nav .nav-container .logo {
       float: left; }
   .nav a {
-    color: #00911b; }
+    color: #8c8c8c; }
     .nav a:hover {
       text-decoration: none; }
   .nav .search-form {
@@ -57,7 +59,7 @@
       padding: 0 10px;
       color: #fff;
       border: none;
-      background: #00911b;
+      background: #0084ff;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       -ms-border-radius: 3px;
