--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -3,16 +3,18 @@
 $nav-height:50px;
 $nav-container-height:50px;
 $menu-width:30px;
-$nav-link-color:$global-color;
 
 .nav{
+    position:fixed;
+    top:0;
+    z-index:9999;
     width:100%;
     height:$nav-height;
+    border-bottom:1px solid rgba(0,0,0,0.1);
     line-height:$nav-height;
     color:#fff;
     background:#333;
     @include clearfix();
-    @include box-shadow(0px 0px 10px #999);
     .nav-container{
         .logo{
             float:left; 
@@ -23,7 +25,7 @@ $nav-link-color:$global-color;
         position:relative;
     }
     a{
-        color:$global-color; 
+        color:$font-color; 
         &:hover{
             text-decoration:none; 
         }
@@ -59,7 +61,7 @@ $nav-link-color:$global-color;
             padding:0 10px;
             color:#fff;
             border:none;
-            background:$global-color;
+            background:$action-blue;
             @include border-radius(3px);
         }
     }
