--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -1,7 +1,7 @@
 //font
 //-----------------------
 $font:13px/1.7 "Helvetica Neue",Helvetica,Arial,sans-serif;
-$font-color:#999;
+$font-color:#8c8c8c;
 //colors
 //-----------------------
 
@@ -15,9 +15,14 @@ $link-hover-color:#205F7E;
 
 //form
 $input-color-placeholder:#ddd;
-
-$global-color:#00911B;
-
 $border-color:#f0f0f0;
 
-$action-green:#00911B;
+//$global-color:#0084ff;
+
+$action-blue:#0084ff;
+$action-blue-hover:#007AEB;
+
+$action-green:#3BC676;
+$action-green-hover:#38BC70;
+
+$red-error:#F14F3D;
