--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -1,6 +1,7 @@
 //font
 //-----------------------
-$font:13px/1.7 "Helvetica Neue",Helvetica,Arial,sans-serif;
+$font:13px/1.7 'Helvetica Neue',Helvetica,arial,sans-serif;
+
 $font-color:#8c8c8c;
 //colors
 //-----------------------
