--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -7,7 +7,7 @@
  * @Author sp
  */
 html {
-  font: 13px/1.7 "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font: 13px/1.7 "Helvetica Neue", Helvetica, arial, sans-serif; }
 
 body {
   margin: 0;
@@ -22,7 +22,8 @@ body {
     body a:hover {
       color: #205f7e; }
   body h1, body h2, body h3, body h4, body h5, body h6 {
-    font-size: 18px; }
+    font-size: 18px;
+    margin: 0; }
 
 img {
   vertical-align: middle;
@@ -568,7 +569,7 @@ footer {
     background: #fff;
     margin: 0px auto;
     width: 1000px;
-    padding: 70px 0;
+    padding: 100px 0 50px 0;
     color: #666; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
@@ -595,6 +596,8 @@ footer {
     width: 100%; }
     .sidebar .ad img {
       max-width: 100%; }
+  .sidebar .back-action a {
+    font-size: 16px; }
 
 .new-post-btn {
   display: inline-block;
