--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,5 +1,5 @@
 html {
-  font: 13px/1.7 "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font: 13px/1.7 "Helvetica Neue", Helvetica, arial, sans-serif; }
 
 body {
   margin: 0;
@@ -14,7 +14,8 @@ body {
     body a:hover {
       color: #205f7e; }
   body h1, body h2, body h3, body h4, body h5, body h6 {
-    font-size: 18px; }
+    font-size: 18px;
+    margin: 0; }
 
 img {
   vertical-align: middle;
