--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
     background: #fff;
     margin: 0px auto;
     width: 1000px;
-    padding: 70px 0;
+    padding: 100px 0 50px 0;
     color: #666; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
@@ -31,6 +31,8 @@
     width: 100%; }
     .sidebar .ad img {
       max-width: 100%; }
+  .sidebar .back-action a {
+    font-size: 16px; }
 
 .new-post-btn {
   display: inline-block;
