--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,5 +1,9 @@
+@font-face {
+  font-family: 'NotoS';
+  src: url("../fonts/NotoS.otf") format("opentype"); }
+
 html {
-  font: 13px/1.7 "Helvetica Neue", Helvetica, arial, sans-serif; }
+  font: 13px/1.7 "NotoS", "Gotham Narrow SSm", "Helvetica Neue", arial, sans-serif; }
 
 body {
   margin: 0;
