--- a/public/sass/lion.scss
+++ b/public/sass/lion.scss
@@ -14,7 +14,7 @@
 //@import "grid.scss";
 @import "grid-responsive.scss";
 @import "class.scss";
-@import "html5.scss";
+//@import "html5.scss";
 @import "img.scss";
 @import "form.scss";
 @import "btn.scss";
