--- a/public/sass/reset.scss
+++ b/public/sass/reset.scss
@@ -3,6 +3,11 @@
 //reset
 //------------------------------------------
 
+@font-face {
+    font-family: 'NotoS';
+    src: url("../fonts/NotoS.otf") format("opentype");
+}
+
 html{
     font:$font;
 }
